--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,19 @@
         <title>Countries</title>
     </header>
     <body>
-        <h1>I'm rendering ...</h1>
+    	<div>
+    		
+	    	<img src=<%= country.flag %>>
+	    	<ul>
+		        <li>Country name: <%= country.name %></li>
+		        <li>Native name: <%= country.nativeName %></li>
+		        <li>Population: <%= country.population %></li>
+		        <li>Region: <%= country.region %></li>
+	    		
+	    	</ul>
+    		
+    	</div>
+
     </body>
     
 </html>
